# image-utilities

./: .gitignore  LICENSE  README.md  pyproject.toml
src/generate_squares/: config.ini  generate_squares_grid.py
